--- a/assets/css/front.css
+++ b/assets/css/front.css
@@ -143,3 +143,34 @@
     background: #f6f6f6;
     border-radius: 8px;
 }
+
+@media screen and (max-width: 640px) {
+
+    .pspsi-table-wrap {
+        width: 100%;
+        overflow: hidden;
+    }
+
+    .pspsi-table,
+    .pspsi-table tr,
+    .pspsi-table td,
+    .pspsi-table tbody {
+        display: block;
+        text-align: center;
+        width: 100%;
+        border: 0px !important;
+    }
+
+    .pspsi-table tr.info_row td {
+        margin-bottom: 30px;
+    }
+
+    .pspsi-table td {
+        padding: 10px;
+    }
+
+    .pspsi-table th {
+        display: none;
+    }
+
+}
